try fix norminette action

--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -6,4 +6,5 @@ jobs:
   v3:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: alexandregv/norminette-action@v3
